Home finished without opacity in the gallery

--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -9,7 +9,6 @@ body {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
-  word-spacing: -1px;
   line-height: 22px;
   color: #7a7a7a;
 }
@@ -290,17 +289,202 @@ HOME - INTERNAL
 }
 
 .slogan a {
+  width: 86px;
   text-decoration: none;
+  color: #7a7a7a;
   font-size: 12px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  border-bottom: 1px solid #252525;
+
+}
+
+.brand {
+  display: inline-block;
+  width: 27%;
+  border: 1px solid #dbdbdb;
+  padding: 30px 30px 46px 22px;
+  position: relative;
+  margin-top: 84px;
+
+}
+
+.brand:nth-child(-n+2) {
+  margin-right: 25px;
+
+}
+
+.brand img {
+  top: -14px;
+  left: 22px;
+  position: absolute;
+
+}
+
+.brand h4 {
+  width: 312px;
+  margin:0 0 34.5px 0;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #252525;
+  border-bottom: 1px solid #252525;
+  padding-bottom: 4px;
+
+}
+
+.brand p {
+  font-size: 13px;
+  letter-spacing: 1.4px;
+  width: 320px;
+  margin: 0;
+}
+
+.nav-gallery ul, .gallery-home {
+  list-style: none;
+  padding: 0;
   
 }
 
-.slogan a p {
-  width: 86px;
-  border-bottom: 1px solid #252525;
-  text-decoration: none;
-  letter-spacing: 1px;
-  line-height: 20px;
-  font-size: 12px;
+.nav-gallery ul {
+  margin: 36px 0 43px 0;
   
+}
+
+.nav-gallery li, .gallery-home li {
+  display: inline-block;
+
+}
+
+.nav-gallery li {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 11.87px;
+  word-spacing: 3px;
+  margin-right: 3px;
+  vertical-align: middle;
+}
+
+.nav-gallery button {
+  width: 36px;
+  height: 36px;
+  background-image: url('../img/gallery-button.png');
+  vertical-align: middle;
+  margin-right: 20px;
+  
+}
+
+.nav-gallery li:nth-child(n+3):before {
+  content: " / ";
+  
+}
+
+.nav-gallery li:nth-child(n+2):hover {
+  color: #252525;
+  border-bottom: 1px solid #252525
+
+}
+
+.gallery-home li {
+  width: 31.6%;
+  height: 366px;
+  background-color: #858585;
+  margin: 0 25px 25px 0;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+   
+}
+
+.gallery-home li:nth-child(3n+3) {
+  margin-right: 0;
+
+}
+
+.gallery-home li h4 {
+  font-weight: 500;
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.gallery-home li p:nth-child(2) {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 12px;
+}
+
+.gallery-home li p:nth-child(3) {
+  font-size: 16px;
+  
+}
+
+.statistics div {
+  width: 17.1%;
+  display: inline-block;
+  text-align: center;
+  margin: 72px 3.78%;
+  padding: 0;
+
+}
+
+.statistics h3 {
+  font-weight: 300;
+  font-size: 50px;
+  color: #252525;
+  margin: 0;
+
+}
+
+.statistics p {
+  font-weight: 500;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-top: 28px;
+}
+
+.comments div {
+  width: 48.5%;
+  height: 277px;
+  display: inline-block;
+  text-align: center;
+  border: 1px solid #dbdbdb;
+  margin: 26px 0 78px;
+
+}
+
+.comments div:first-child {
+  margin-right: 25px;
+}
+
+.comments h4 {
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #252525;
+  background-image: url(../img/footer-h5-bar.png);
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  margin: 39px 0 0 0;
+  padding-bottom: 11px;
+
+}
+
+.comments p {
+  font-size: 13px;
+  margin: 28px 0 39px;
+  padding: 0 39px;
+  
+}
+
+.comments a {
+  font-weight: 500;
+  font-size: 10px;
+  text-decoration: none;
+  color: #252525;
+  border: 1px solid #252525;
+  padding: 14px 19px;
+
 }
