--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -97,7 +97,7 @@ TOP HEADER - INTERNAL
 
 .header-internal {
   float: left;
-  margin: 86px 0 80px;
+  margin-top: 86px;
   padding: 0;
   width: 100%;
   text-align: center;
@@ -486,5 +486,88 @@ HOME - INTERNAL
   color: #252525;
   border: 1px solid #252525;
   padding: 14px 19px;
+
+}
+
+/**********************************
+404 - INTERNAL
+***********************************/
+
+.error404 {
+  width: 100%;
+  float: left; 
+  text-align: center;
+  margin: 86px 0 118px;
+}
+
+.error404 div {
+  margin: 0 auto;
+  width: 43.5%;
+  height: 286px;
+  border: 1px double #252525;
+  
+}
+
+.error404 h4 {
+  margin: 34px 0 14px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #252525;
+  background-image: url(../img/footer-h5-bar.png);
+  background-repeat: no-repeat; 
+  background-position: bottom center;
+  padding-bottom: 11px;
+  
+}
+
+.error404 p {
+  font-size: 13px;
+  padding: 0 35px;
+
+}
+
+.links404 {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 12px;
+
+}
+
+.links404 a {
+  color: #252525;
+  text-decoration: none;
+  line-height: 12px;
+  border-bottom: 1px solid #7a7a7a;
+
+}
+
+/**********************************
+ABOUT - INTERNAL
+***********************************/
+
+.header-about {
+  width: 100%;
+  height: 274px;
+  margin: 53px 0 85px;
+  float: left;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+
+}
+
+.header-about h3 {
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+
+}
+
+.header-about p {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 12px;
 
 }
