--- a/code/app/styles/styles-ie.css
+++ b/code/app/styles/styles-ie.css
@@ -1,3 +1,7 @@
+/**********************************
+HOME - INTERNAL
+***********************************/
+
 .nav-gallery button {
   border: none;
 
