--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -617,7 +617,7 @@ ABOUT - INTERNAL
 .about-history ul {
   list-style: none;
   padding: 0;
-  margin-top: 107px;
+  margin: 107px 0 0;
   
 }
 
@@ -658,4 +658,71 @@ ABOUT - INTERNAL
 .about-history p {
   font-size: 13px;
   margin: 0 0 20px;
+  
+}
+
+.our-team {
+  width: 100%;
+  height: 350px;
+  text-align: center;
+  background-color: #252525;
+
+}
+
+.our-team img {
+  margin-top: 65px;
+  
+}
+
+.our-team h4 {
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 18px 0 20px;
+
+}
+
+.our-team p {
+  font-size: 13px;
+  margin: 0 17%;
+
+}
+
+.teams-members ul {
+  list-style: none;
+  padding: 0;
+  margin: 28px 0 36px;
+
+}
+
+.teams-members li {
+  width: 23%;
+  display: inline-block;
+  text-align: center;
+  
+}
+
+.teams-members li:nth-child(-n+3) {
+  margin-right: 26px;
+
+}
+
+.teams-members h4 {
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 3px;
+  color: #252525;
+  text-transform: uppercase;
+  margin: 24px 0 0
+
+}
+
+.teams-members p {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 12px;
+  margin: 0;
+
 }
