--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -483,6 +483,7 @@ HOME - INTERNAL
 .comments a {
   font-weight: 500;
   font-size: 10px;
+  letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
   color: #252525;
@@ -549,7 +550,7 @@ HOME - INTERNAL
 ABOUT - INTERNAL
 ***********************************/
 
-.header-about {
+.header-internals {
   width: 100%;
   height: 274px;
   margin: 53px 0 85px;
@@ -560,7 +561,7 @@ ABOUT - INTERNAL
 
 }
 
-.header-about div {
+.header-internals div {
   width: 98.6%;
   height: 258px;
   margin: 8px auto;
@@ -568,7 +569,7 @@ ABOUT - INTERNAL
 
 }
 
-.header-about h3 {
+.header-internals h3 {
   margin: 110px 0 7px;
   font-size: 24px;
   font-weight: 600;
@@ -577,7 +578,7 @@ ABOUT - INTERNAL
 
 }
 
-.header-about p {
+.header-internals p {
   margin: 0;
   font-family: "Playfair Display", serif;
   font-style: italic;
@@ -724,5 +725,107 @@ ABOUT - INTERNAL
   font-style: italic;
   font-size: 12px;
   margin: 0;
+
+}
+
+/**********************************
+BLOG - INTERNAL
+***********************************/
+
+.post, .quotation {
+  width: 65.8%;
+  float: left;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 46px;
+  margin-bottom: 54px;
+  
+}
+
+.post h4 {
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 3px;
+  color: #252525;
+  text-transform: uppercase;
+  background-image: url(../img/footer-h5-bar.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  padding-bottom: 11px;
+  margin: 0;
+  
+}
+
+.post h5 {
+  float: left;
+  
+}
+
+.post h5, .post ul {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 11px 0 32px;
+
+}
+
+.post ul {
+  list-style: none;
+  float: right;
+  padding: 0;
+
+}
+
+.post li {
+  display: inline-block;
+  
+}
+
+.post li:nth-child(n+3):before {
+  content: "|";
+
+}
+
+.post li img {
+  padding: 0 10px;
+  vertical-align: middle;
+  
+}
+
+.post li img:last-child {
+  padding-right: 0
+  
+}
+
+.post li img[src="img/twitter-logo.png"] {
+  width: 13px;
+  height: 12px;
+  
+}
+
+.post div {
+  float: left;
+  width: 100%;
+  height: 380px;
+  background-color: #8f8f8f;
+
+}
+
+.post p {
+  float: left;
+  font-size: 13px;
+  margin: 46px 32px 46px 0;
+
+}
+
+.post a {
+  float: left;
+  font-weight: 500;
+  font-size: 10px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #252525;
+  border: 1px solid #252525;
+  padding: 10px 16px;
 
 }
