--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -732,7 +732,12 @@ ABOUT - INTERNAL
 BLOG - INTERNAL
 ***********************************/
 
-.post, .quotation {
+.post-categories {
+  width: 100%;
+  float: left;
+
+}
+.post {
   width: 65.8%;
   float: left;
   border-bottom: 1px solid #e8e8e8;
@@ -828,4 +833,152 @@ BLOG - INTERNAL
   border: 1px solid #252525;
   padding: 10px 16px;
 
+}
+
+.last-post {
+  margin-bottom: 24px;
+
+}
+.last-post p {
+  margin-top: 23px;
+
+}
+
+.quotation {
+  float: left;
+  width: 65.8%;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 61px;
+  margin: 7px 0 54px;
+  
+}
+
+.quotation div {
+  width: 89.1%;
+  float: left;
+  border: 1px solid #dadada;
+  color: #252525;
+  padding: 32px 62px 40px 20px;
+  
+}
+
+.quotation h2 {
+  font-size: 20px;
+  line-height: 28px;
+  color: #252525;  
+  margin: 0;
+
+}
+.quotation h3 {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  letter-spacing: -0.5px;
+  margin: 4px 0 8px;
+
+}
+
+.quotation h4 {
+  font-weight: 500;
+  font-size: 10px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 0;
+  
+}
+
+.oder-post {
+  width: 65.8%;
+  float: left;
+  margin-bottom: 160px;
+
+}
+
+.oder-post a {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 0;
+  padding-left: 18px;
+
+}
+
+.categories, .flickr-pics, .tags {
+  width: 23.1%;
+  float: right;
+}
+
+.categories h4, .flickr-pics h4, .tags h4 {
+  font-weight: 500;
+  font-size: 12px;
+  letter-spacing: 2px;
+  color: #252525;
+  text-transform: uppercase;
+  
+}
+
+.categories h4 {
+  margin: 124px 0 19px;
+  
+}
+
+.categories ul {
+  padding-left: 15px;
+  list-style-type: square;
+  margin: 0;
+}
+
+.categories li {
+  font-size: 13px;
+  border-bottom: 1px solid #e8e8e8;
+  padding: 13px 0 17px;
+
+}
+
+.categories li:last-child {
+  border: none;
+
+}
+
+.flickr-pics h4 {
+  margin: 66px 0 30px;
+
+}
+
+.flickr-pics ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.flickr-pics li {
+  width: 30.3%;
+  height: 77px;
+  display: inline-block;
+  background-color: #9b9b9b;
+  margin: 0 7px 7px 0;
+
+}
+
+.flickr-pics li:nth-child(3n+3) {
+  margin-right: 0;
+
+}
+
+.recent h4 {
+  margin: 68px 0 25px;
+
+}
+
+.tags h4 {
+  margin: 77px 0 32px;
+
+}
+.tags p {
+  font-size: 13px;
+  text-decoration: underline;
+  margin: 0;
 }
