--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -1360,3 +1360,129 @@ PORTFOLIO - INTERNAL
   margin-bottom: 55px;
 
 }
+
+/**********************************
+PORTFOLIO-DETAIL - INTERNAL
+***********************************/
+
+.header-portfolio-detail {
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin-top: 138px;
+
+}
+
+.header-portfolio-detail h2, .project-interest h3 {
+  font-size: 22px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #252525;
+  background-image: url(../img/footer-h5-bar.png);
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  margin: 0;
+  padding-bottom: 15px;
+
+}
+
+.header-portfolio-detail a {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  margin-right: 18px;
+
+}
+
+.header-portfolio-detail a:last-child {
+  margin-left: 20px;
+
+}
+
+.header-portfolio-detail button {
+  width: 36px;
+  height: 36px;
+  background-image: url(../img/portfolio-detail-button.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: none;
+  vertical-align: middle;
+  margin: 30px 0;
+  padding: 0;
+
+}
+
+.project-image {
+  width: 100%;
+  height: 586px;
+  float: left;
+  background-color: #858585;
+  margin: 8px 0 55px;
+}
+
+.project-info div:first-child {
+  width: 65.83%;
+  float: left;
+
+}
+
+.project-info div:last-child {
+  width: 23.1%;
+  float: right;
+    
+}
+
+.project-info p {
+  font-size: 13px;
+  letter-spacing: 1.24px;
+  margin: 0 0 24px;
+
+}
+
+.project-info h4 {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #252525;
+  margin: 0;
+  
+}
+
+.project-info h5 {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 3px 0 28px;
+
+}
+
+.project-info a {
+  font-weight: 500;
+  font-size: 10px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #252525;
+  border: 1px solid #252525;
+  padding: 14px 20px;
+  margin-top: 11px;
+
+}
+
+.project-interest {
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin-bottom: 52px;
+
+}
+
+.project-interest h3 {
+  font-size: 12px;
+  padding-bottom: 11px;
+  margin: 125px 0 52px;
+  
+}
